2010-06-18  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions to 1.2.0RC1

2010-06-18  Francois Suter  <francois@typo3.org>

	* Fixed bug #14774: Scheduler: Improve documentation with various advice for developers

2010-06-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14770: htmlArea RTE: Abbreviation dialogue not always correctly initialized

2010-06-17  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14729: Backwards compatibility broken by disabled deprecation log

2010-06-17  Benjamin Mack  <benni@typo3.org>

	* Release of TYPO3 4.4.0RC1

2010-06-17  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #14577 Ext.ux.elasticTextArea causes JS errors in all version of IE (Thanks to Jo Hasenau)
	* Partly reverted #14636: Improvements to new Backend skin - reverted TCEforms styling, will be included later

2010-06-16  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14633: Nested form tag breaks editing icons and ExtJS funcitonality in the page module for IE8 users (Thanks to Jo Hasenau)
	* Fixed bug #14132: Regexp for automatic line breaks in Gifbuilder is incorrect (Thanks to Jigal van Hemert)
	* Follow-up to #14733: Improvements to Backend skin - Fixed typo
	* Fixed bug #14733: Improvements to Backend skin (Thanks to Steffen Gebert)

2010-06-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14567: htmlArea RTE: RTE is greyed out and has no "styles" in page module QuickEdit
	* Fixed bug #14746: htmlArea RTE: TableOperations: Label for "Headers" has a colon in excess
	* Fixed bug #14748: Span tags with multiple classes being removed by RTE transformation

2010-06-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13874: NULL reference when using hook in class.t3lib_utility_client.php (Thanks to Steffen Mueller)
	* Fixed bug #14717: [Usability] Add delay to close the context menu
	* Fixed bug #14016: typo in class.t3lib_tcemain.php (Thanks to Vladimir Podkovanov)

2010-06-15  Stanislas Rolland  <typo3@sjbr.ca>
